k8s/app-manifest-prod/j26-scoutin-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: j26-scoutin-2
spec:
  selector:
    app: j26-scoutin-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
